array.island.Island.scala.error
Erreur de compilation :
Island:4: error: type mismatch;
 found   : Unit
 required: Int
  for (i<-1 to num.length){
        ^